<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FooKart</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="cart">cart</string>
    <string name="no_item_in_cart">You haven\'t added anything in your cart yet.</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="count">Count</string>
    <string name="details">Details</string>
    <string name="category">Category</string>
    <string name="product_added">Product Added</string>

</resources>
